--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
-  "name": "tauris",
-  "version": "1.0.0",
-  "description": "A simple Node.JS argument parser with subcommand support and a beautilful UI",
-  "main": "index.js",
-  "repository": "https://github.com/codemaster138/node-tauris.git",
-  "author": "Jake <pygamer138@gmail.com>",
-  "license": "MIT"
+    "name": "tauris",
+    "version": "1.0.0",
+    "description": "A simple Node.JS argument parser with subcommand support and a beautiful UI",
+    "main": "index.js",
+    "scripts": {
+        "build": "tsc",
+        "prepublish": "yarn build"
+    },
+    "repository": "https://github.com/codemaster138/node-tauris.git",
+    "author": "Jake <pygamer138@gmail.com>",
+    "license": "MIT",
+    "dependencies": {
+        "chalk": "^4.1.0"
+    },
+    "devDependencies": {
+        "@types/node": "^14.14.7",
+        "typescript": "^4.0.5"
+    }
 }
