--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "tauris",
-    "version": "1.3.2",
+    "version": "1.3.3",
     "description": "A simple Node.JS argument parser with subcommand support and a beautiful UI",
     "main": "index.js",
     "scripts": {
         "build": "tsc",
         "prepublish": "yarn build",
-        "postpublish": "git add index.js && git commit -m \"chore: compile & publish\""
+        "postpublish": "git add . && git commit -m \"chore: compile & publish\""
     },
     "repository": "https://github.com/codemaster138/node-tauris.git",
     "author": "Jake <pygamer138@gmail.com>",
