--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
     "version": "1.7.5",
     "description": "A simple Node.JS argument parser with subcommand support and a beautiful UI",
     "main": "index.js",
+	"types": "index.ts",
+    "files": [
+        "index.js"
+    ],
     "scripts": {
         "build": "tsc",
         "prepublish": "yarn build",
-        "postpublish": "git add . && git commit -m \"chore: compile & publish\""
+        "postpublish": "git add . && git commit -m \"chore: compile & publish\"",
+		"minify": "terser -o index.js --compress passes=128,keep_fargs=false,unsafe_methods=true --mangle --ecma 6 -- index.js"
     },
     "repository": "https://github.com/codemaster138/node-tauris.git",
     "author": "Jake <pygamer138@gmail.com>",
@@ -16,6 +21,7 @@
     },
     "devDependencies": {
         "@types/node": "^14.14.7",
+        "terser": "^5.12.1",
         "typescript": "^4.0.5"
     }
 }
