--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
-    "name": "tauris",
-    "version": "1.8.1",
-    "description": "A simple Node.JS argument parser with subcommand support and a beautiful UI",
-    "main": "index.js",
-    "types": "index.ts",
-    "files": [
-        "index.js"
-    ],
-    "scripts": {
-        "build": "tsc",
-        "prepublish": "yarn build",
-        "postpublish": "git add . && git commit -m \"chore: compile & publish\"",
-        "minify": "terser -o index.js --compress passes=128,keep_fargs=false,unsafe_methods=true --mangle --ecma 6 -- index.js"
-    },
-    "repository": "https://github.com/codemaster138/node-tauris.git",
-    "author": "Jake <pygamer138@gmail.com>",
-    "license": "MIT",
-    "dependencies": {
-        "chalk": "^4.1.0"
-    },
-    "devDependencies": {
-        "@types/node": "^14.14.7",
-        "terser": "^5.12.1",
-        "typescript": "^4.0.5"
-    }
+  "name": "tauris",
+  "version": "1.8.1-d.01",
+  "description": "A simple Node.JS argument parser with subcommand support and a beautiful UI",
+  "main": "index.js",
+  "types": "index.ts",
+  "files": [
+    "index.js"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "prepublish": "yarn build",
+    "postpublish": "git add . && git commit -m \"chore: compile & publish\"",
+    "minify": "terser -o index.js --compress passes=128,keep_fargs=false,unsafe_methods=true --mangle --ecma 6 -- index.js"
+  },
+  "repository": "https://github.com/codemaster138/node-tauris.git",
+  "author": "Jake <pygamer138@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^14.14.7",
+    "terser": "^5.12.1",
+    "typescript": "^4.0.5"
+  }
 }
